<resources>
    <string name="app_name">4K Media player</string>
    <string name="recents">Recents</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_recently_played_media">No recently played media</string>
    <string name="lock_player">lock player</string>
    <string name="next_media">next media</string>
    <string name="play_pause_btn">play pause btn</string>
    <string name="back_button">back button</string>
    <string name="prev_media_btn">prev media btn</string>
</resources>