<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VideoPlayerActivity"
    android:background="@color/allDark">

    <androidx.media3.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:use_controller="false"
        />
    <ProgressBar
        android:id="@+id/buffer_view"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:indeterminateTint="@color/accent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/overlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        >
<!--        header layout-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="@dimen/dp_10"
            android:paddingVertical="@dimen/dp_20"
            android:background="@drawable/overlay_bg_top"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:hapticFeedbackEnabled="true"
                android:soundEffectsEnabled="true"
                android:background="@drawable/back_arrow"
                android:contentDescription="@string/back_button"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_15"
                android:maxLines="2"
                android:textAllCaps="false"
                android:textColor="@color/allLight"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/optionsBtn"
                app:layout_constraintStart_toEndOf="@id/back_btn"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck"
                tools:text="this is a video heading title" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/optionsBtn"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:background="@drawable/option_dots"
                android:rotation="90"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
<!--        control layout-->
        <LinearLayout
            android:id="@+id/controls_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/overlay_bg_bottom"
            android:paddingVertical="@dimen/dp_20"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginVertical="@dimen/dp_10"
                >
                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/current_duration"
                    app:layout_constraintEnd_toStartOf="@id/max_duration"
                    android:progressTint="@color/accent"
                    android:progressBackgroundTint="@color/accent"
                    android:thumbTint="@color/accent"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/current_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25:55"
                    android:textColor="@color/allLight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/max_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25:55"
                    android:textColor="@color/allLight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/play_pause_button"
                    android:layout_width="@dimen/dp_70"
                    android:layout_height="@dimen/dp_80"
                    android:background="@drawable/play_icon_no_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/play_pause_btn"

                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/next_btn"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:background="@drawable/next_icon_fill_white"
                    app:layout_constraintStart_toEndOf="@id/play_pause_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="@dimen/dp_15"
                    android:contentDescription="@string/next_media"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/prev_btn"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:background="@drawable/next_icon_fill_white"
                    app:layout_constraintEnd_toStartOf="@id/play_pause_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="@dimen/dp_15"
                    android:rotation="180"
                    android:contentDescription="@string/prev_media_btn"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:background="@drawable/unlock_icon"
                    android:rotationY="180"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/lock_player"
                    android:layout_marginStart="@dimen/dp_10"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>