<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity"
    android:background="@color/background"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:layout_marginHorizontal="@dimen/dp_14"
        android:layout_marginVertical="@dimen/dp_14">
<!--        header section-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/text_muted"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Library"
                    android:textColor="@color/text"
                    android:textSize="@dimen/sp_25"
                    android:textStyle="bold"

                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
<!--        search section-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/chip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_layout"
            app:strokeWidth="0dp"
            app:cardCornerRadius="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_12"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dp_12">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_24"
                    android:src="@drawable/search"
                    android:paddingEnd="@dimen/dp_5"
                    android:soundEffectsEnabled="true"
                    android:clickable="true"
                    android:hapticFeedbackEnabled="true"

                    />
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Search tracks, artists"
                    android:textColorHint="@color/text_muted"
                    android:textColor="@color/text_muted"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/sp_16"
                    android:maxLines="1"
                    android:maxEms="20"
                    android:maxLength="40"
                    android:paddingHorizontal="@dimen/dp_5"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
<!--        navigation -->
        <LinearLayout
            android:id="@+id/navigation_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/search_view"
            android:layout_marginTop="@dimen/dp_12">
            <LinearLayout
                android:id="@+id/recent_btn_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/recent_btn_inActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/dp_24"
                    app:cardBackgroundColor="@android:color/transparent"
                    android:visibility="gone">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingVertical="@dimen/dp_8"
                        android:paddingHorizontal="@dimen/dp_16">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/dp_16"
                            android:layout_height="@dimen/dp_22"
                            android:src="@drawable/clock"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recents"
                            android:textColor="@color/text_muted"
                            android:textSize="@dimen/sp_17"
                            android:layout_marginStart="@dimen/dp_7"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/recent_btn_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:cardCornerRadius="@dimen/dp_24"
                    app:cardBackgroundColor="@color/dark">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingVertical="@dimen/dp_8"
                        android:paddingHorizontal="@dimen/dp_16">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/dp_16"
                            android:layout_height="@dimen/dp_22"
                            android:src="@drawable/clock_active"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recents"
                            android:textColor="@color/light"
                            android:textSize="@dimen/sp_17"
                            android:layout_marginStart="@dimen/dp_7"/>
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/music_btn_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/dp_10">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/music_btn_inActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/dp_24"
                    app:cardBackgroundColor="@android:color/transparent"
                    android:visibility="visible">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingVertical="@dimen/dp_8"
                        android:paddingHorizontal="@dimen/dp_16">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/dp_16"
                            android:layout_height="@dimen/dp_22"
                            android:src="@drawable/music"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/music"
                            android:textColor="@color/text_muted"
                            android:textSize="@dimen/sp_17"
                            android:layout_marginStart="@dimen/dp_7"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/music_btn_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:cardCornerRadius="@dimen/dp_24"
                    app:cardBackgroundColor="@color/dark">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingVertical="@dimen/dp_8"
                        android:paddingHorizontal="@dimen/dp_16">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/dp_16"
                            android:layout_height="@dimen/dp_22"
                            android:src="@drawable/music_active"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/music"
                            android:textColor="@color/light"
                            android:textSize="@dimen/sp_17"
                            android:layout_marginStart="@dimen/dp_7"/>
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/video_btn_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/dp_10">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/video_btn_inActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/dp_24"
                    app:cardBackgroundColor="@android:color/transparent"
                    android:visibility="visible">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingVertical="@dimen/dp_8"
                        android:paddingHorizontal="@dimen/dp_16">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/dp_16"
                            android:layout_height="@dimen/dp_22"
                            android:src="@drawable/video"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video"
                            android:textColor="@color/text_muted"
                            android:textSize="@dimen/sp_17"
                            android:layout_marginStart="@dimen/dp_7"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/video_btn_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:cardCornerRadius="@dimen/dp_24"
                    app:cardBackgroundColor="@color/dark">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingVertical="@dimen/dp_8"
                        android:paddingHorizontal="@dimen/dp_16">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/dp_16"
                            android:layout_height="@dimen/dp_22"
                            android:src="@drawable/video_active"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video"
                            android:textColor="@color/light"
                            android:textSize="@dimen/sp_17"
                            android:layout_marginStart="@dimen/dp_7"/>
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>
        </LinearLayout>
<!--        main body-->
        <FrameLayout
            android:id="@+id/content_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/navigation_layout"
            app:layout_constraintBottom_toTopOf="@id/player_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            />

<!--        footer -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="@dimen/dp_20"
            app:cardBackgroundColor="@android:color/transparent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp_12"
                android:paddingHorizontal="@dimen/dp_16">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/music_icon_view"
                    android:layout_width="@dimen/dp_45"
                    android:layout_height="@dimen/dp_45"
                    android:orientation="vertical"
                    app:cardBackgroundColor="@color/chip"
                    app:strokeWidth="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dp_35"
                        android:layout_height="@dimen/dp_35"
                        android:src="@drawable/music_accent"
                        android:padding="8dp"
                        android:layout_gravity="center"/>

                </com.google.android.material.card.MaterialCardView>
              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  app:layout_constraintStart_toEndOf="@id/music_icon_view"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginStart="@dimen/dp_15"
                  >
                  <com.google.android.material.textview.MaterialTextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Midnight drive"
                      android:textStyle="bold"
                      android:textColor="@color/text"
                      android:textSize="@dimen/sp_14"/>
                  <com.google.android.material.textview.MaterialTextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="solace"
                      android:textStyle="bold"
                      android:textColor="@color/text_muted"/>
              </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>